--- a/repo_reader.ipynb
+++ b/repo_reader.ipynb
@@ -706,6 +706,11 @@
     "os.chdir(directory)\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
+    "def clone_github_repo(repo_url):\n",
+    "    temp_dir = tempfile.mkdtemp()\n",
+    "    Repo.clone_from(repo_url, temp_dir)\n",
+    "    return temp_dir\n",
+    "\n",
     "def find_python_files(path):\n",
     "    python_files = []\n",
     "    for root, _, files in os.walk(path):\n",
@@ -790,8 +795,9 @@
     "\n",
     "    return \"\\n\".join(summary)\n",
     "\n",
-    "\n",
     "def main():\n",
+    "    # repo_url = input(\"Input url\") # Replace with the GitHub repository URL\n",
+    "    # local_repo_path = clone_github_repo(repo_url)\n",
     "    analysis = analyze_directory(directory)\n",
     "    # pprint.pprint(analysis)\n",
     "    visualize_connections(analysis)\n",
@@ -800,6 +806,16 @@
     "    chatbot = Chatbot()\n",
     "    response = chatbot.smart_prompt(prompt)\n",
     "    print(response)\n",
+    "\n",
+    "    # Loop to handle follow-up questions\n",
+    "    while True:\n",
+    "        user_question = input(\"\\nEnter your follow-up question or type 'exit' to quit: \").strip()\n",
+    "        if user_question.lower() == 'exit':\n",
+    "            break\n",
+    "\n",
+    "        # Call GPT chatbot with the follow-up question\n",
+    "        response = chatbot.smart_prompt(user_question)\n",
+    "        print(response)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
